WIP(back): adds experience collection-type, fields, and configuration (#1027)

--- a/back/config/sync/core-store.plugin_content_manager_configuration_content_types##api##award.award.json
+++ b/back/config/sync/core-store.plugin_content_manager_configuration_content_types##api##award.award.json
@@ -148,6 +148,21 @@
           "sortable": false
         }
       },
+      "experiences": {
+        "edit": {
+          "label": "experiences",
+          "description": "",
+          "placeholder": "",
+          "visible": true,
+          "editable": true,
+          "mainField": "name"
+        },
+        "list": {
+          "label": "experiences",
+          "searchable": false,
+          "sortable": false
+        }
+      },
       "createdAt": {
         "edit": {
           "label": "createdAt",
@@ -208,6 +223,13 @@
       }
     },
     "layouts": {
+      "list": [
+        "name",
+        "projects",
+        "URL",
+        "date",
+        "positions"
+      ],
       "edit": [
         [
           {
@@ -256,14 +278,13 @@
             "name": "seo",
             "size": 12
           }
+        ],
+        [
+          {
+            "name": "experiences",
+            "size": 6
+          }
         ]
-      ],
-      "list": [
-        "name",
-        "projects",
-        "URL",
-        "date",
-        "positions"
       ]
     }
   },
