--- a/back/config/sync/core-store.plugin_content_manager_configuration_content_types##api##industry.industry.json
+++ b/back/config/sync/core-store.plugin_content_manager_configuration_content_types##api##industry.industry.json
@@ -150,6 +150,21 @@
           "sortable": false
         }
       },
+      "experiences": {
+        "edit": {
+          "label": "experiences",
+          "description": "",
+          "placeholder": "",
+          "visible": true,
+          "editable": true,
+          "mainField": "name"
+        },
+        "list": {
+          "label": "experiences",
+          "searchable": false,
+          "sortable": false
+        }
+      },
       "createdAt": {
         "edit": {
           "label": "createdAt",
@@ -210,6 +225,12 @@
       }
     },
     "layouts": {
+      "list": [
+        "name",
+        "slug",
+        "positions",
+        "projects"
+      ],
       "edit": [
         [
           {
@@ -256,13 +277,13 @@
             "name": "seo",
             "size": 12
           }
+        ],
+        [
+          {
+            "name": "experiences",
+            "size": 6
+          }
         ]
-      ],
-      "list": [
-        "name",
-        "slug",
-        "positions",
-        "projects"
       ]
     }
   },
