--- a/back/config/sync/core-store.plugin_content_manager_configuration_content_types##api##project.project.json
+++ b/back/config/sync/core-store.plugin_content_manager_configuration_content_types##api##project.project.json
@@ -235,6 +235,21 @@
           "sortable": false
         }
       },
+      "experiences": {
+        "edit": {
+          "label": "experiences",
+          "description": "",
+          "placeholder": "",
+          "visible": true,
+          "editable": true,
+          "mainField": "name"
+        },
+        "list": {
+          "label": "experiences",
+          "searchable": false,
+          "sortable": false
+        }
+      },
       "createdAt": {
         "edit": {
           "label": "createdAt",
@@ -377,6 +392,12 @@
           {
             "name": "seo",
             "size": 12
+          }
+        ],
+        [
+          {
+            "name": "experiences",
+            "size": 6
           }
         ]
       ]
