--- a/back/config/sync/core-store.plugin_content_manager_configuration_content_types##api##experiences-page.experiences-page.json
+++ b/back/config/sync/core-store.plugin_content_manager_configuration_content_types##api##experiences-page.experiences-page.json
@@ -1,14 +1,14 @@
 {
-  "key": "plugin_content_manager_configuration_content_types::api::classification.classification",
+  "key": "plugin_content_manager_configuration_content_types::api::experiences-page.experiences-page",
   "value": {
-    "uid": "api::classification.classification",
+    "uid": "api::experiences-page.experiences-page",
     "settings": {
       "bulkable": true,
       "filterable": true,
       "searchable": true,
       "pageSize": 10,
-      "mainField": "name",
-      "defaultSortBy": "name",
+      "mainField": "id",
+      "defaultSortBy": "id",
       "defaultSortOrder": "ASC"
     },
     "metadatas": {
@@ -20,59 +20,16 @@
           "sortable": true
         }
       },
-      "name": {
+      "content": {
         "edit": {
-          "label": "Name",
+          "label": "content",
           "description": "",
           "placeholder": "",
           "visible": true,
           "editable": true
         },
         "list": {
-          "label": "name",
-          "searchable": true,
-          "sortable": true
-        }
-      },
-      "slug": {
-        "edit": {
-          "label": "Slug",
-          "description": "",
-          "placeholder": "",
-          "visible": true,
-          "editable": true
-        },
-        "list": {
-          "label": "slug",
-          "searchable": true,
-          "sortable": true
-        }
-      },
-      "summary": {
-        "edit": {
-          "label": "Summary",
-          "description": "",
-          "placeholder": "",
-          "visible": true,
-          "editable": true
-        },
-        "list": {
-          "label": "summary",
-          "searchable": false,
-          "sortable": false
-        }
-      },
-      "skills": {
-        "edit": {
-          "label": "Skills",
-          "description": "",
-          "placeholder": "",
-          "visible": true,
-          "editable": true,
-          "mainField": "name"
-        },
-        "list": {
-          "label": "skills",
+          "label": "content",
           "searchable": false,
           "sortable": false
         }
@@ -87,21 +44,6 @@
         },
         "list": {
           "label": "seo",
-          "searchable": false,
-          "sortable": false
-        }
-      },
-      "experiences": {
-        "edit": {
-          "label": "experiences",
-          "description": "",
-          "placeholder": "",
-          "visible": true,
-          "editable": true,
-          "mainField": "name"
-        },
-        "list": {
-          "label": "experiences",
           "searchable": false,
           "sortable": false
         }
@@ -167,31 +109,15 @@
     },
     "layouts": {
       "list": [
-        "name",
-        "slug",
-        "skills",
-        "experiences"
+        "id",
+        "content",
+        "seo",
+        "createdAt"
       ],
       "edit": [
         [
           {
-            "name": "name",
-            "size": 6
-          },
-          {
-            "name": "slug",
-            "size": 6
-          }
-        ],
-        [
-          {
-            "name": "skills",
-            "size": 6
-          }
-        ],
-        [
-          {
-            "name": "summary",
+            "name": "content",
             "size": 12
           }
         ],
@@ -199,12 +125,6 @@
           {
             "name": "seo",
             "size": 12
-          }
-        ],
-        [
-          {
-            "name": "experiences",
-            "size": 6
           }
         ]
       ]
