--- a/back/config/sync/core-store.plugin_content_manager_configuration_content_types##api##classification.classification.json
+++ b/back/config/sync/core-store.plugin_content_manager_configuration_content_types##api##classification.classification.json
@@ -91,21 +91,6 @@
           "sortable": false
         }
       },
-      "experiences": {
-        "edit": {
-          "label": "experiences",
-          "description": "",
-          "placeholder": "",
-          "visible": true,
-          "editable": true,
-          "mainField": "name"
-        },
-        "list": {
-          "label": "experiences",
-          "searchable": false,
-          "sortable": false
-        }
-      },
       "createdAt": {
         "edit": {
           "label": "createdAt",
@@ -169,8 +154,7 @@
       "list": [
         "name",
         "slug",
-        "skills",
-        "experiences"
+        "skills"
       ],
       "edit": [
         [
@@ -199,12 +183,6 @@
           {
             "name": "seo",
             "size": 12
-          }
-        ],
-        [
-          {
-            "name": "experiences",
-            "size": 6
           }
         ]
       ]
