--- a/back/config/sync/core-store.plugin_content_manager_configuration_content_types##api##certification.certification.json
+++ b/back/config/sync/core-store.plugin_content_manager_configuration_content_types##api##certification.certification.json
@@ -134,6 +134,21 @@
           "sortable": false
         }
       },
+      "experiences": {
+        "edit": {
+          "label": "experiences",
+          "description": "",
+          "placeholder": "",
+          "visible": true,
+          "editable": true,
+          "mainField": "name"
+        },
+        "list": {
+          "label": "experiences",
+          "searchable": false,
+          "sortable": false
+        }
+      },
       "createdAt": {
         "edit": {
           "label": "createdAt",
@@ -215,7 +230,7 @@
             "size": 4
           },
           {
-            "name": "positions",
+            "name": "experiences",
             "size": 4
           }
         ],
@@ -241,7 +256,8 @@
       "list": [
         "name",
         "slug",
-        "skills"
+        "skills",
+        "experiences"
       ]
     }
   },
