--- a/back/config/sync/core-store.plugin_content_manager_configuration_content_types##api##skill.skill.json
+++ b/back/config/sync/core-store.plugin_content_manager_configuration_content_types##api##skill.skill.json
@@ -134,21 +134,6 @@
           "sortable": false
         }
       },
-      "positions": {
-        "edit": {
-          "label": "positions",
-          "description": "",
-          "placeholder": "",
-          "visible": true,
-          "editable": true,
-          "mainField": "name"
-        },
-        "list": {
-          "label": "positions",
-          "searchable": false,
-          "sortable": false
-        }
-      },
       "organizations": {
         "edit": {
           "label": "organizations",
@@ -297,6 +282,15 @@
       }
     },
     "layouts": {
+      "list": [
+        "icon",
+        "name",
+        "slug",
+        "proficiency",
+        "experiences",
+        "projects",
+        "organizations"
+      ],
       "edit": [
         [
           {
@@ -314,15 +308,15 @@
         ],
         [
           {
-            "name": "experiences",
-            "size": 4
-          },
-          {
             "name": "summary",
             "size": 6
           }
         ],
         [
+          {
+            "name": "experiences",
+            "size": 4
+          },
           {
             "name": "projects",
             "size": 4
@@ -330,7 +324,9 @@
           {
             "name": "organizations",
             "size": 4
-          },
+          }
+        ],
+        [
           {
             "name": "classifications",
             "size": 4
@@ -343,10 +339,6 @@
           },
           {
             "name": "certifications",
-            "size": 4
-          },
-          {
-            "name": "positions",
             "size": 4
           }
         ],
@@ -374,15 +366,6 @@
             "size": 6
           }
         ]
-      ],
-      "list": [
-        "icon",
-        "name",
-        "slug",
-        "proficiency",
-        "positions",
-        "projects",
-        "organizations"
       ]
     }
   },
