refactor(front): filters experiences by current then by startDate

--- a/back/config/sync/core-store.plugin_content_manager_configuration_content_types##api##experience.experience.json
+++ b/back/config/sync/core-store.plugin_content_manager_configuration_content_types##api##experience.experience.json
@@ -435,6 +435,10 @@
       "list": [
         "title",
         "name",
+        "organizations",
+        "projects",
+        "industries",
+        "skills",
         "slug"
       ]
     }
