--- a/front/package.json
+++ b/front/package.json
@@ -9,7 +9,7 @@
     "lint": "prettier --check . && eslint .",
     "dev.l": "vite --config vite.local.config.js dev",
     "dev.s": "vite --config vite.local.config.js dev",
-    "dev.p": "vite --config vite.config.js dev",
+    "dev.p": "vite --config vite.local.config.js dev",
     "dev": "vite --config vite.config.js dev",
     "build.l": "WARN_ONLY=true vite --config vite.local.config.js build",
     "build.s": "vite --config vite.config.js build",
@@ -17,9 +17,9 @@
     "build": "vite --config vite.config.js build",
     "preview": "vite --config vite.config.js preview",
     "preview.local": "vite --config vite.local.config.js preview",
-    "postbuild.l": "npx svelte-sitemap -i '404.html' -i '/404/index.html' -i 'shingle.html' -i '/shingle/index.html' -i '/posts/category/index.html' -t --attribution=false --domain https://local.dgrebb.com",
-    "postbuild.s": "npx svelte-sitemap -i '404.html' -i '/404/index.html' -i 'shingle.html' -i '/shingle/index.html' -i '/posts/category/index.html' -t --attribution=false --domain https://stg.dgrebb.com",
-    "postbuild": "npx svelte-sitemap -i '404.html' -i '/404/index.html' -i 'shingle.html' -i '/shingle/index.html' -i '/posts/category/index.html' -t --attribution=false --domain https://www.dgrebb.com",
+    "postbuild.l": "npx svelte-sitemap -i '404.html' -i '/404/index.html' -i 'shingle.html' -i '/shingle/index.html' -i '/posts/category/index.html' -i '**/cv/**' -t --attribution=false --domain https://local.dgrebb.com",
+    "postbuild.s": "npx svelte-sitemap -i '404.html' -i '/404/index.html' -i 'shingle.html' -i '/shingle/index.html' -i '/posts/category/index.html' -i '**/cv/**' -t --attribution=false --domain https://stg.dgrebb.com",
+    "postbuild": "npx svelte-sitemap -i '404.html' -i '/404/index.html' -i 'shingle.html' -i '/shingle/index.html' -i '/posts/category/index.html' -i '**/cv/**' -t --attribution=false --domain https://www.dgrebb.com",
     "test": "npm run test:integration && npm run test:unit",
     "format": "prettier --write .",
     "test:integration": "playwright test",
